Bug 169971 - Background color of Start Center is white in light theme
Summary: Background color of Start Center is white in light theme
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2025-12-14 08:33 UTC by nobu
Modified: 2026-04-05 11:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-12-14 08:33:12 UTC
Description:
Background color of Start Center is white.

Steps to Reproduce:
1. Open Start Center Recent master version

Actual Results:
2. Background color of Start Center is white.

Expected Results:
2. By default, it should have a dark background color.


Reproducible: Always


User Profile Reset: No

Additional Info:

The specifications may have been changed.

Reproducible
[2025-12-14]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 73561293382a2d0a8586f01a3395af890d3bd914
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

Reproducible
[2025-12-14]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 73561293382a2d0a8586f01a3395af890d3bd914
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

Could this be the cause?
https://git.libreoffice.org/core/+/92b013bdb4d567b98bfcf42a0831abe42117691c%5E%21
Comment 1 Buovjaga 2025-12-19 12:53:38 UTC
(In reply to nobu from comment #0)
> Could this be the cause?
> https://git.libreoffice.org/core/+/
> 92b013bdb4d567b98bfcf42a0831abe42117691c%5E%21

Thanks, I checked and that is indeed the cause.
Comment 2 dcbw@libreoffice.org 2025-12-19 13:23:45 UTC
I'll figure out the fix.
Comment 3 nobu 2025-12-19 13:47:51 UTC
It seems that the following properties have been disabled by default.
StartCenterThumbnailsBackgroundColor
StartCenterThumbnailsTextColor
Comment 4 dcbw@libreoffice.org 2025-12-19 21:02:30 UTC
https://gerrit.libreoffice.org/c/core/+/195942
Comment 5 Buovjaga 2025-12-19 21:18:29 UTC
(In reply to dcbw@libreoffice.org from comment #4)
> https://gerrit.libreoffice.org/c/core/+/195942

I built with the patch and confirm the old bg colour is back.
Comment 6 Commit Notification 2025-12-22 15:00:11 UTC
Dan Williams committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5140e19a2d709339a986fa9fa1cf16ec185f444d

tdf#169971 fix call order of derived ThumbnailView UpdateColors() method

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-12-22 19:37:37 UTC
Dan Williams committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/f8f854c580ec77edfee42136679883151128220a

tdf#169971 fix call order of derived ThumbnailView UpdateColors() method

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 nobu 2026-02-02 20:08:25 UTC
Reproducible
Version: 25.8.5.1 (X86_64)
Build ID: cde5f182e321816108385dd3739c4295be919062
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 9 Commit Notification 2026-02-03 10:34:42 UTC
Dan Williams committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e9d9ea41b7a3dc6271b9b7fe173a94e96543030a

tdf#169971 fix call order of derived ThumbnailView UpdateColors() method

It will be available in 25.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 nobu 2026-04-05 05:57:21 UTC
Fixed in above commit.
[2026-04-05]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 69ac9c22dd4bdd88545b758ff77ac07575efe6f0
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded