tdf#169971 fix call order of derived ThumbnailView UpdateColors() method

Derived class' UpdateColors() methods should be called rather than the
base class method, otherwise the derived classes can't set the colors
they want. Fixes an error in the patch for tdf#169727.

Change-Id: I2f5828a81f1e4732e171f43d7407244e3f6e25a2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195942
Tested-by: Jenkins
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>